src/rust/sqlite-sys/src/bindings.rs

#[test]
fn bindgen_test_layout_sqlite3_mem_methods() {
    assert_eq!(
        ::core::mem::size_of::<sqlite3_mem_methods>(),
        64usize,
        concat!("Size of: ", stringify!(sqlite3_mem_methods))
    );
    assert_eq!(
        ::core::mem::align_of::<sqlite3_mem_methods>(),
        8usize,
        concat!("Alignment of ", stringify!(sqlite3_mem_methods))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<sqlite3_mem_methods>())).xMalloc as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sqlite3_mem_methods),
            "::",
            stringify!(xMalloc)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<sqlite3_mem_methods>())).xFree as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sqlite3_mem_methods),
            "::",
            stringify!(xFree)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<sqlite3_mem_methods>())).xRealloc as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(sqlite3_mem_methods),
            "::",
            stringify!(xRealloc)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<sqlite3_mem_methods>())).xSize as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(sqlite3_mem_methods),
            "::",
            stringify!(xSize)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<sqlite3_mem_methods>())).xRoundup as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(sqlite3_mem_methods),
            "::",
            stringify!(xRoundup)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<sqlite3_mem_methods>())).xInit as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(sqlite3_mem_methods),
            "::",
            stringify!(xInit)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<sqlite3_mem_methods>())).xShutdown as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(sqlite3_mem_methods),
            "::",
            stringify!(xShutdown)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<sqlite3_mem_methods>())).pAppData as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(sqlite3_mem_methods),
            "::",
            stringify!(pAppData)
        )
    );
}
extern "C" {
    pub fn sqlite3_extended_result_codes(arg1: *mut sqlite3, onoff: libc::c_int) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_last_insert_rowid(arg1: *mut sqlite3) -> sqlite3_int64;
}
extern "C" {
    pub fn sqlite3_set_last_insert_rowid(arg1: *mut sqlite3, arg2: sqlite3_int64);
}
extern "C" {
    pub fn sqlite3_changes(arg1: *mut sqlite3) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_total_changes(arg1: *mut sqlite3) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_interrupt(arg1: *mut sqlite3);
}
extern "C" {
    pub fn sqlite3_complete(sql: *const libc::c_char) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_complete16(sql: *const libc::c_void) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_busy_handler(
        arg1: *mut sqlite3,
        arg2: ::core::option::Option<
            unsafe extern "C" fn(arg1: *mut libc::c_void, arg2: libc::c_int) -> libc::c_int,
        >,
        arg3: *mut libc::c_void,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_busy_timeout(arg1: *mut sqlite3, ms: libc::c_int) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_get_table(
        db: *mut sqlite3,
        zSql: *const libc::c_char,
        pazResult: *mut *mut *mut libc::c_char,
        pnRow: *mut libc::c_int,
        pnColumn: *mut libc::c_int,
        pzErrmsg: *mut *mut libc::c_char,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_free_table(result: *mut *mut libc::c_char);
}
extern "C" {
    pub fn sqlite3_mprintf(arg1: *const libc::c_char, ...) -> *mut libc::c_char;
}
extern "C" {
    pub fn sqlite3_vmprintf(arg1: *const libc::c_char, arg2: va_list) -> *mut libc::c_char;
}
extern "C" {
    pub fn sqlite3_snprintf(
        arg1: libc::c_int,
        arg2: *mut libc::c_char,
        arg3: *const libc::c_char,
        ...
    ) -> *mut libc::c_char;
}
extern "C" {
    pub fn sqlite3_vsnprintf(
        arg1: libc::c_int,
        arg2: *mut libc::c_char,
        arg3: *const libc::c_char,
        arg4: va_list,
    ) -> *mut libc::c_char;
}
extern "C" {
    pub fn sqlite3_malloc(arg1: libc::c_int) -> *mut libc::c_void;
}
extern "C" {
    pub fn sqlite3_malloc64(arg1: sqlite3_uint64) -> *mut libc::c_void;
}
extern "C" {
    pub fn sqlite3_realloc(arg1: *mut libc::c_void, arg2: libc::c_int) -> *mut libc::c_void;
}
extern "C" {
    pub fn sqlite3_realloc64(arg1: *mut libc::c_void, arg2: sqlite3_uint64) -> *mut libc::c_void;
}
extern "C" {
    pub fn sqlite3_free(arg1: *mut libc::c_void);
}
extern "C" {
    pub fn sqlite3_msize(arg1: *mut libc::c_void) -> sqlite3_uint64;
}
extern "C" {
    pub fn sqlite3_memory_used() -> sqlite3_int64;
}
extern "C" {
    pub fn sqlite3_memory_highwater(resetFlag: libc::c_int) -> sqlite3_int64;
}
extern "C" {
    pub fn sqlite3_randomness(N: libc::c_int, P: *mut libc::c_void);
}
extern "C" {
    pub fn sqlite3_set_authorizer(
        arg1: *mut sqlite3,
        xAuth: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut libc::c_void,
                arg2: libc::c_int,
                arg3: *const libc::c_char,
                arg4: *const libc::c_char,
                arg5: *const libc::c_char,
                arg6: *const libc::c_char,
            ) -> libc::c_int,
        >,
        pUserData: *mut libc::c_void,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_trace(
        arg1: *mut sqlite3,
        xTrace: ::core::option::Option<
            unsafe extern "C" fn(arg1: *mut libc::c_void, arg2: *const libc::c_char),
        >,
        arg2: *mut libc::c_void,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn sqlite3_profile(
        arg1: *mut sqlite3,
        xProfile: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut libc::c_void,
                arg2: *const libc::c_char,
                arg3: sqlite3_uint64,
            ),
        >,
        arg2: *mut libc::c_void,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn sqlite3_trace_v2(
        arg1: *mut sqlite3,
        uMask: libc::c_uint,
        xCallback: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: libc::c_uint,
                arg2: *mut libc::c_void,
                arg3: *mut libc::c_void,
                arg4: *mut libc::c_void,
            ) -> libc::c_int,
        >,
        pCtx: *mut libc::c_void,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_progress_handler(
        arg1: *mut sqlite3,
        arg2: libc::c_int,
        arg3: ::core::option::Option<unsafe extern "C" fn(arg1: *mut libc::c_void) -> libc::c_int>,
        arg4: *mut libc::c_void,
    );
}
extern "C" {
    pub fn sqlite3_open(filename: *const libc::c_char, ppDb: *mut *mut sqlite3) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_open16(filename: *const libc::c_void, ppDb: *mut *mut sqlite3) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_open_v2(
        filename: *const libc::c_char,
        ppDb: *mut *mut sqlite3,
        flags: libc::c_int,
        zVfs: *const libc::c_char,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_uri_parameter(
        zFilename: *const libc::c_char,
        zParam: *const libc::c_char,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn sqlite3_uri_boolean(
        zFile: *const libc::c_char,
        zParam: *const libc::c_char,
        bDefault: libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_uri_int64(
        arg1: *const libc::c_char,
        arg2: *const libc::c_char,
        arg3: sqlite3_int64,
    ) -> sqlite3_int64;
}
extern "C" {
    pub fn sqlite3_errcode(db: *mut sqlite3) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_extended_errcode(db: *mut sqlite3) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_errmsg(arg1: *mut sqlite3) -> *const libc::c_char;
}
extern "C" {
    pub fn sqlite3_errmsg16(arg1: *mut sqlite3) -> *const libc::c_void;
}
extern "C" {
    pub fn sqlite3_errstr(arg1: libc::c_int) -> *const libc::c_char;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3_stmt {
    _unused: [u8; 0],
}
extern "C" {
    pub fn sqlite3_limit(arg1: *mut sqlite3, id: libc::c_int, newVal: libc::c_int) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_prepare(
        db: *mut sqlite3,
        zSql: *const libc::c_char,
        nByte: libc::c_int,
        ppStmt: *mut *mut sqlite3_stmt,
        pzTail: *mut *const libc::c_char,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_prepare_v2(
        db: *mut sqlite3,
        zSql: *const libc::c_char,
        nByte: libc::c_int,
        ppStmt: *mut *mut sqlite3_stmt,
        pzTail: *mut *const libc::c_char,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_prepare_v3(
        db: *mut sqlite3,
        zSql: *const libc::c_char,
        nByte: libc::c_int,
        prepFlags: libc::c_uint,
        ppStmt: *mut *mut sqlite3_stmt,
        pzTail: *mut *const libc::c_char,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_prepare16(
        db: *mut sqlite3,
        zSql: *const libc::c_void,
        nByte: libc::c_int,
        ppStmt: *mut *mut sqlite3_stmt,
        pzTail: *mut *const libc::c_void,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_prepare16_v2(
        db: *mut sqlite3,
        zSql: *const libc::c_void,
        nByte: libc::c_int,
        ppStmt: *mut *mut sqlite3_stmt,
        pzTail: *mut *const libc::c_void,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_prepare16_v3(
        db: *mut sqlite3,
        zSql: *const libc::c_void,
        nByte: libc::c_int,
        prepFlags: libc::c_uint,
        ppStmt: *mut *mut sqlite3_stmt,
        pzTail: *mut *const libc::c_void,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_sql(pStmt: *mut sqlite3_stmt) -> *const libc::c_char;
}
extern "C" {
    pub fn sqlite3_expanded_sql(pStmt: *mut sqlite3_stmt) -> *mut libc::c_char;
}
extern "C" {
    pub fn sqlite3_normalized_sql(pStmt: *mut sqlite3_stmt) -> *const libc::c_char;
}
extern "C" {
    pub fn sqlite3_stmt_readonly(pStmt: *mut sqlite3_stmt) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_stmt_isexplain(pStmt: *mut sqlite3_stmt) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_stmt_busy(arg1: *mut sqlite3_stmt) -> libc::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3_value {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3_context {
    _unused: [u8; 0],
}
extern "C" {
    pub fn sqlite3_bind_blob(
        arg1: *mut sqlite3_stmt,
        arg2: libc::c_int,
        arg3: *const libc::c_void,
        n: libc::c_int,
        arg4: ::core::option::Option<unsafe extern "C" fn(arg1: *mut libc::c_void)>,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_bind_blob64(
        arg1: *mut sqlite3_stmt,
        arg2: libc::c_int,
        arg3: *const libc::c_void,
        arg4: sqlite3_uint64,
        arg5: ::core::option::Option<unsafe extern "C" fn(arg1: *mut libc::c_void)>,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_bind_double(
        arg1: *mut sqlite3_stmt,
        arg2: libc::c_int,
        arg3: f64,
    ) -> libc::c_int;
}
extern "C" {
    pub fn sqlite3_bind_int(
        arg1: *mut sqlite3_stmt,
        arg2: libc::c_int,
        arg3: libc::c_int,
    ) -> libc::c_int;
}
